syntax = "proto3";
package dev.emortal.kurushimi;

option java_package = "dev.emortal.api.kurushimi";
option java_multiple_files = true;
option go_package = "github.com/emortalmc/kurushimi/pkg/pb";

import "google/protobuf/timestamp.proto";

message Ticket {
  string id = 1;
  string player_id = 2;
  google.protobuf.Timestamp created_at = 3;

  // A TTL for a ticket is useful if it is created to connect to a lobby
  // If the ticket gets hung, it is no longer valid
//  google.protobuf.Duration expire_after = 4;

  SearchFields search_fields = 4;

  // notify_proxy: If not specified, true.
  // If true, the proxy will be notified of a ticket's assignment.
  // If false, it is expected that you use WatchTicketAssignment to know when a ticket has been assigned.
  optional bool notify_proxy = 5;
}

message SearchFields {
  map<string, string> string_args = 1;
  repeated string tags = 2;
}

message Match {
  string id = 1;
  string profile_name = 2;

  repeated Ticket tickets = 3;
  optional Assignment assignment = 4;
}

message Assignment {
  string server_id = 1;
  string server_address = 2;
  uint32 server_port = 3;
}

message PendingMatch {
  string id = 1;
  string profile_name = 2;

  repeated Ticket tickets = 3;
  google.protobuf.Timestamp teleport_time = 4;
}